// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`combination combinate all chars 1`] = `
Array [
  "a",
  "aa",
  "aaa",
  "aab",
  "aac",
  "ab",
  "aba",
  "abb",
  "abc",
  "ac",
  "aca",
  "acb",
  "acc",
  "b",
  "ba",
  "baa",
  "bab",
  "bac",
  "bb",
  "bba",
  "bbb",
  "bbc",
  "bc",
  "bca",
  "bcb",
  "bcc",
  "c",
  "ca",
  "caa",
  "cab",
  "cac",
  "cb",
  "cba",
  "cbb",
  "cbc",
  "cc",
  "cca",
  "ccb",
  "ccc",
]
`;

exports[`combine combine one char with chars 1`] = `
Array [
  "a",
  "aa",
  "aaa",
  "aab",
  "aac",
  "ab",
  "aba",
  "abb",
  "abc",
  "ac",
  "aca",
  "acb",
  "acc",
]
`;
